force-app/main/default/objects/Email_Sent_Log__c/Email_Sent_Log__c.object-meta.xml
<CustomObject>
    <label>Email Sent Log</label>
    <nameField>
        <displayFormat>EMAIL-{000000}</displayFormat>
        <label>Email Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Sent Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>