force-app/main/default/objects/Email_Sent_Log__c/fields/Clicked_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Clicked_Timestamp__c</fullName>
    <label>Clicked Timestamp</label>
    <type>DateTime</type>
</CustomField>