force-app/main/default/objects/Email_Sent_Log__c/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Sent Logs</relationshipLabel>
    <relationshipName>Email_Sent_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>