force-app/main/default/objects/Email_Sent_Log__c/fields/CV_Insights_Referenced__c.field-meta.xml
<CustomField>
    <fullName>CV_Insights_Referenced__c</fullName>
    <label>CV Insights Referenced</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>