force-app/main/default/objects/Email_Sent_Log__c/fields/Email_Template_Used__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Used__c</fullName>
    <label>Email Template Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>