force-app/main/default/objects/Email_Sent_Log__c/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <type>Email</type>
</CustomField>