force-app/main/default/objects/Email_Sent_Log__c/fields/Sent_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Sent_Timestamp__c</fullName>
    <label>Sent Timestamp</label>
    <type>DateTime</type>
</CustomField>