force-app/main/default/objects/Email_Sent_Log__c/fields/Tracking_Token__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Token__c</fullName>
    <externalId>true</externalId>
    <label>Tracking Token</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>