force-app/main/default/objects/Email_Sent_Log__c/fields/Tracking_Url__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Url__c</fullName>
    <label>Tracking URL</label>
    <type>Url</type>
</CustomField>